data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1816.wast
;; 7. **Test Description:** Execute `br_if` in a loop containing a `call_indirect` that mismatches the indirect table's function type, ensuring the engine correctly reports an invalid function type error.    - **Constraint:** Ensures that indirect table lookups and type checks are accurate.    - **Improper Handling:** Incorrect jumps to unintended functions due to type checks.

(assert_invalid
  (module
    (table 1)) (elem (i32.const 0) $type-mismatch)
    (type $sig (func (result i32)))
    (func $type-mismatch (result i32) (i32.const 1))
    (func $main
      (loop $loop
        (call_indirect (type $sig) 
          (i32.const 0)) 
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)